--- a/gearup/pubspec.yaml
+++ b/gearup/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,6 +39,9 @@ dependencies:
   flutter_bloc:
   shared_preferences:
   equatable:
+  validators: ^3.0.0
+  motion_toast: ^2.1.0
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
