--- a/gearup/pubspec.yaml
+++ b/gearup/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  flutter_compass: ^0.6.1
   flutter_launcher_icons: ^0.9.2
   flutter_rating_bar: ^4.0.0
   flutter_secure_storage: ^5.0.2
