--- a/gearup/pubspec.yaml
+++ b/gearup/pubspec.yaml
@@ -14,9 +14,12 @@ dependencies:
   animate_do: ^2.0.0
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
+  flare_flutter: ^3.0.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  flutter_compass: ^0.7.0
+  flutter_launcher_icons: ^0.9.2
   flutter_rating_bar: ^4.0.0
   flutter_secure_storage: ^5.0.2
   flutter_svg: ^1.0.0
@@ -24,7 +27,9 @@ dependencies:
   google_fonts: ^2.1.0
   http: ^0.13.4
   image_picker: ^0.8.4+4
+  location: ^4.3.0
   permission_handler: ^8.3.0
+  sensors: ^2.0.3
   shimmer: ^2.0.0
   stripe_payment: ^1.1.1
   timeago: ^3.1.0
