--- a/gearup/pubspec.yaml
+++ b/gearup/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 
 dependencies:
   animate_do: ^2.0.0
+  build_runner: ^2.1.7
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
   flare_flutter: ^3.0.2
@@ -22,20 +23,24 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_rating_bar: ^4.0.0
   flutter_secure_storage: ^5.0.2
+  flutter_slidable: ^0.6.0
   flutter_svg: ^1.0.0
   form_field_validator: ^1.1.0
   google_fonts: ^2.1.0
   http: ^0.13.4
   image_picker: ^0.8.4+4
+  # onesignal_flutter: ^3.2.8
   permission_handler: ^8.3.0
   shimmer: ^2.0.0
   stripe_payment: ^1.1.1
   timeago: ^3.1.0
 
+
 dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.17
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
