--- a/gearup/pubspec.yaml
+++ b/gearup/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 
 dependencies:
   animate_do: ^2.0.0
+  awesome_notifications: ^0.6.21
   build_runner: ^2.1.7
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
