--- a/gearup/pubspec.yaml
+++ b/gearup/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shimmer: ^2.0.0
   stripe_payment: ^1.1.1
   timeago: ^3.1.0
+  shake: ^1.0.1
 
 
 dev_dependencies:
@@ -42,6 +43,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.17
+  bloc_test: ^9.0.2
+  test: ^1.17.12
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
